# blog_examples

python-rust/: .flake8  .gitignore  pyproject.toml
python-rust/python_rust/: __init__.py  main.py  py_parser.py
python-rust/rusty_log_parser/: Cargo.toml  pyproject.toml
python-rust/rusty_log_parser/rusty_log_parser/: __init__.py
python-rust/rusty_log_parser/src/: lib.rs
req_counter/: Dockerfile  index.js  package.json
req_counter/kube/: deployment.yml  ingress.yml  service.yml
